Fixed whitespace issues on the footer and bottombar icons

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
@@ -40,6 +40,7 @@
   clear: both;
   flex-grow: 1;
   position: relative;
+  padding-bottom: 25px;
   .gn-md-view {
     padding: 0 20px;
   }
